# Assembler-Project

./: .gitignore  CMakeLists.txt  README.md  colors.h  encode.c  encode.h  entry_test.as  errors.c  errors.h  errors_handle.c  errors_handle.h  file1.am  file1.as  file2.am  file2.as  file3.as  file4.as  finish_encode.c  finish_encode.h  first_pass.c  first_pass.h  general.c  general.h  general_functions.c  general_functions.h  globals.h  hash_table.c  hash_table.h  lexer.c  lexer.h  linked_list.c  linked_list.h  macro_table.c  macro_table.h  macros_table.c  macros_table.h  main.c  main.h  makefile  pre_assembler.c  (+10 more)
Headers/: colors.h  encode.h  errors_handle.h  finish_encode.h  first_pass.h  general_functions.h  globals.h  hash_table.h  lexer.h  linked_list.h  main.h  pre_assembler.h  second_pass.h  symbol_struct.h  validation.h
SourceFiles/: encode.c  errors_handle.c  finish_encode.c  first_pass.c  general_functions.c  hash_table.c  lexer.c  linked_list.c  main.c  pre_assembler.c  second_pass.c  symbol_struct.c  validation.c
Testers/: Test1.as  extern_test.as  file4.as  invalid_macro_tester.as
Testers/Instruction/: invalid_instr.as
Testers/commands/: invalid_command.as
Testers/extern_entry/: extern_test.as
Testers/final_test/: full_valid_test.as  full_valid_test.ent  full_valid_test.ext  full_valid_test.ob
Testers/final_tests_valid/test2/: valid_inst.as
Testers/final_tests_valid/test3/: test010.as
Testers/macro_tests/: invalid_macro_tester.as  macro_invalid.as
Testers/macro_tests/valid/: macro_calls_test.as
